# errtools

./: Cargo.toml
examples/: wrap_err.rs  wrap_err_kind.rs
src/: deserialize.rs  lib.rs
tests/: serialize.rs
