[package]
name = "errtools"
version = "0.1.0"
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.105"

[dev-dependencies]
adhocerr = "0.1.2"
eyre = "0.3.5"
serde_json = "1.0.50"
anyhow = { path = "/home/jlusby/git/rust/anyhow" }
thiserror = "1.0.16"
displaydoc = "0.1.5"
