[package]
name = "errtools"
version = "0.1.0"
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"

[dev-dependencies]
adhocerr = "0.1.2"
eyre = "0.3.5"
serde_json = "1.0.50"
thiserror = "1.0.16"
displaydoc = "0.1.5"
anyhow = "1.0.28"
